# compute_graph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
cmake/: compute_graphConfig.cmake.in
compute_graph/include/compute_graph/: algo.hpp  compute_graph.hpp  context.hpp  graph.hpp  graph_context.hpp  node.hpp  node_descriptor.hpp  socket.hpp  socket_descriptor.hpp
compute_graph/include/compute_graph/extra/: ctx_nodes.hpp
compute_graph/include/compute_graph/intern/: config.hpp  node.hpp  node_descriptor.hpp  pp.hpp  socket_descriptor.hpp  traits.hpp  type_erased_factory.hpp  type_erased_ptr.hpp
compute_graph/source/: node.cpp
examples/: CMakeLists.txt  autodiff.cpp  calc.cpp  main.cpp
